--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Nunito+Sans&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -14,21 +16,136 @@
     <div class="contaner">
         <header>
             <div class="header">
-                <nav>
+                <img class="img_header" src="img/header_01.png" alt="header">
+                <div class="row">
+                    <div class="col-1">
+                        <img class="justify-content-home pt-2 pl-1" src="img/logo.png" alt="logo">
+                    </div>
+                    <div class="col-11">
+                        <nav>
+                            <ul class="nav justify-content-end">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="">HOME</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="">ABOUT</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="">WORK</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="">PROCESS</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="">SERVICES</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="">TESTIMONIALS</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="">CONTACT</a>
+                                </li>
+                            </ul>
 
-                </nav>
+                        </nav>
+                    </div>
+                </div>
+
                 <div class="wrapper">
                     <div class="row">
-                       <div class="col-7">
+                        <div class="col-6">
 
-                       </div>
-                       <div class="col-5">
-                           
-                       </div> 
+                        </div>
+                        <div class="col-6">
+                            <p class="header">
+                                <h1>We Design and Develop</h1>
+                                <h3>We are a new design studio based in USA. We have over
+                                    20 years of combined experience, and know a thing or two
+                                    about designing websites and mobile apps.</h3>
+                            </p>
+                            <p>
+                                <a class="btn btn-primary" href="#">CONTACT US</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </header>
+        <section class="about">
+            <div class="row w-100% pt-2">
+                <div class="col col-12">
+                    <p>
+                        <h1>ABOUT US</h1><br />
+                        Divide have don't man wherein air fourth. Own itself make have night won't make.<br />
+                        A you under Seed appear which good give. Own give air without fowl moveth dry first<br />
+                        heaven fruit, dominion she'd won't very all.<br />
+                        <img src="img/01_03.png" alt="">
+                    </p>
+                </div>
+
+            </div>
+        </section>
+        <section class="skills">
+            <div class="row cols-2">
+                <div class="col-6 pskills-text">
+                    <h2>Professional Skills</h2><br />
+                    <h5>UI/UX Design 75%</h5>
+                    <div class=" progress" style="height: 5px;">
+                        <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                        </ div>
+                    </div>
+                    <h5>web development 90%</h5>
+                    <div class="progress" style="height: 5px;">
+                        <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h5>marketing 65%</h5>
+                    <div class="progress" style="height: 5px;">
+                        <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <img style="padding: 0px; margin-left: -12px; width: 102%;" src="img/skill_img.png" alt="">
+                </div>
+            </div>
+
+        </section>
+        <section class="work">
+            <div class="row cols-4 w-100%">
+                <div class="col-3">
+                    <h5>548</h5>
+                    <p>PROJECTS COMPLETED</p>
+                </div>
+                <div class="col-3">
+                    <h5>1465</h5>
+                    <p>WORKING HOURS</p>
+                </div>
+                <div class="col-3">
+                    <h5>612</h5>
+                    <p>POSITIVE FEEDBACKS</p>
+                </div>
+                <div class="col-3">
+                    <h5>735</h5>
+                    <p>HAPPY CLIENTS</p>
+                </div>
+
+            </div>
+
+        </section>
+        <section class="portfolio">
+<div class="portfolio row">
+<div class="portfolio-1 col-3"></div>
+<div class="portfolio-2 col-3"></div>
+<div class="portfolio-3 col-3"></div>
+<div class="portfolio-4 col-3"></div>
+<div class="portfolio-5 col-3"></div>
+<div class="portfolio-6 col-3"></div>
+<div class="portfolio-7 col-3"></div>
+<div class="portfolio-8 col-3"></div>
+</div>
+        </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
